# carsharing-crud

./: .gitignore  pyproject.toml
src/api/v1/: urls.py
src/api/v1/carsharing/: views.py
src/apps/carsharing/: admin.py  apps.py  helpers.py  models.py  serializer.py  views.py
src/apps/carsharing/migrations/: 0001_initial.py  0002_car_renter_alter_car_status.py  0003_remove_car_id_remove_car_renter_car_car_id_offer.py  0004_remove_offer_id_offer_offer_id.py
src/config/: settings.py  urls.py
